Semantica/implementação/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_declaracoes
Rule 2     lista_declaracoes -> lista_declaracoes declaracao
Rule 3     lista_declaracoes -> declaracao
Rule 4     declaracao -> declaracao_variaveis
Rule 5     declaracao -> inicializacao_variaveis
Rule 6     declaracao -> declaracao_funcao
Rule 7     declaracao_variaveis -> tipo DOISPONTOS lista_variaveis
Rule 8     inicializacao_variaveis -> atribuicao
Rule 9     lista_variaveis -> lista_variaveis VIRGULA var
Rule 10    lista_variaveis -> var
Rule 11    var -> ID
Rule 12    var -> ID indice
Rule 13    indice -> indice ABRECOLCH expressao FECHACOLCH
Rule 14    indice -> ABRECOLCH expressao FECHACOLCH
Rule 15    tipo -> INTEIRO
Rule 16    tipo -> FLUTUANTE
Rule 17    declaracao_funcao -> tipo cabecalho
Rule 18    declaracao_funcao -> cabecalho
Rule 19    cabecalho -> ID ABREPAR lista_parametros FECHAPAR corpo FIM
Rule 20    lista_parametros -> lista_parametros VIRGULA lista_parametros
Rule 21    lista_parametros -> parametro
Rule 22    lista_parametros -> vazio
Rule 23    parametro -> tipo DOISPONTOS ID
Rule 24    parametro -> parametro ABRECOLCH FECHACOLCH
Rule 25    corpo -> corpo acao
Rule 26    corpo -> vazio
Rule 27    acao -> expressao
Rule 28    acao -> declaracao_variaveis
Rule 29    acao -> se
Rule 30    acao -> repita
Rule 31    acao -> leia
Rule 32    acao -> escreva
Rule 33    acao -> retorna
Rule 34    acao -> error
Rule 35    se -> SE expressao ENTAO corpo FIM
Rule 36    se -> SE expressao ENTAO corpo SENAO corpo FIM
Rule 37    repita -> REPITA corpo ATE expressao
Rule 38    atribuicao -> var ATRIBUICAO expressao
Rule 39    leia -> LEIA ABREPAR ID FECHAPAR
Rule 40    escreva -> ESCREVA ABREPAR expressao FECHAPAR
Rule 41    retorna -> RETORNA ABREPAR expressao FECHAPAR
Rule 42    expressao -> expressao_simples
Rule 43    expressao -> atribuicao
Rule 44    expressao_simples -> expressao_aditiva
Rule 45    expressao_simples -> expressao_simples operador_relacional expressao_aditiva
Rule 46    expressao_aditiva -> expressao_multiplicativa
Rule 47    expressao_aditiva -> expressao_aditiva operador_multiplicacao expressao_unaria
Rule 48    expressao_multiplicativa -> expressao_unaria
Rule 49    expressao_multiplicativa -> expressao_aditiva operador_soma expressao_multiplicativa
Rule 50    expressao_unaria -> fator
Rule 51    expressao_unaria -> operador_soma fator
Rule 52    operador_relacional -> MENOR
Rule 53    operador_relacional -> MAIOR
Rule 54    operador_relacional -> IGUAL
Rule 55    operador_relacional -> DIFERENTE
Rule 56    operador_relacional -> MENORIGUAL
Rule 57    operador_relacional -> MAIORIGUAL
Rule 58    operador_relacional -> ELOGICO
Rule 59    operador_relacional -> OULOGICO
Rule 60    operador_relacional -> NEGACAO
Rule 61    operador_soma -> SOMA
Rule 62    operador_soma -> SUBR
Rule 63    operador_multiplicacao -> VEZES
Rule 64    operador_multiplicacao -> DIVIDE
Rule 65    fator -> ABREPAR expressao FECHAPAR
Rule 66    fator -> var
Rule 67    fator -> chamada_funcao
Rule 68    fator -> numero
Rule 69    numero -> INTEIRO
Rule 70    numero -> FLUTUANTE
Rule 71    chamada_funcao -> ID ABREPAR lista_argumentos FECHAPAR
Rule 72    lista_argumentos -> lista_argumentos VIRGULA expressao
Rule 73    lista_argumentos -> expressao
Rule 74    lista_argumentos -> vazio
Rule 75    vazio -> <empty>

Terminals, with rules where they appear

ABRECOLCH            : 13 14 24
ABREPAR              : 19 39 40 41 65 71
ATE                  : 37
ATRIBUICAO           : 38
DIFERENTE            : 55
DIVIDE               : 64
DOISPONTOS           : 7 23
ELOGICO              : 58
ENTAO                : 35 36
ESCREVA              : 40
FECHACOLCH           : 13 14 24
FECHAPAR             : 19 39 40 41 65 71
FIM                  : 19 35 36
FLUTUANTE            : 16 70
ID                   : 11 12 19 23 39 71
IGUAL                : 54
INTEIRO              : 15 69
LEIA                 : 39
MAIOR                : 53
MAIORIGUAL           : 57
MENOR                : 52
MENORIGUAL           : 56
NEGACAO              : 60
OULOGICO             : 59
REPITA               : 37
RETORNA              : 41
SE                   : 35 36
SENAO                : 36
SOMA                 : 61
SUBR                 : 62
VEZES                : 63
VIRGULA              : 9 20 72
error                : 34

Nonterminals, with rules where they appear

acao                 : 25
atribuicao           : 8 43
cabecalho            : 17 18
chamada_funcao       : 67
corpo                : 19 25 35 36 36 37
declaracao           : 2 3
declaracao_funcao    : 6
declaracao_variaveis : 4 28
escreva              : 32
expressao            : 13 14 27 35 36 37 38 40 41 65 72 73
expressao_aditiva    : 44 45 47 49
expressao_multiplicativa : 46 49
expressao_simples    : 42 45
expressao_unaria     : 47 48
fator                : 50 51
indice               : 12 13
inicializacao_variaveis : 5
leia                 : 31
lista_argumentos     : 71 72
lista_declaracoes    : 1 2
lista_parametros     : 19 20 20
lista_variaveis      : 7 9
numero               : 68
operador_multiplicacao : 47
operador_relacional  : 45
operador_soma        : 49 51
parametro            : 21 24
programa             : 0
repita               : 30
retorna              : 33
se                   : 29
tipo                 : 7 17 23
var                  : 9 10 38 66
vazio                : 22 26 74

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_declaracoes
    (2) lista_declaracoes -> . lista_declaracoes declaracao
    (3) lista_declaracoes -> . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . inicializacao_variaveis
    (6) declaracao -> . declaracao_funcao
    (7) declaracao_variaveis -> . tipo DOISPONTOS lista_variaveis
    (8) inicializacao_variaveis -> . atribuicao
    (17) declaracao_funcao -> . tipo cabecalho
    (18) declaracao_funcao -> . cabecalho
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE
    (38) atribuicao -> . var ATRIBUICAO expressao
    (19) cabecalho -> . ID ABREPAR lista_parametros FECHAPAR corpo FIM
    (11) var -> . ID
    (12) var -> . ID indice

    INTEIRO         shift and go to state 7
    FLUTUANTE       shift and go to state 5
    ID              shift and go to state 11

    cabecalho                      shift and go to state 2
    tipo                           shift and go to state 3
    declaracao_funcao              shift and go to state 8
    atribuicao                     shift and go to state 12
    inicializacao_variaveis        shift and go to state 1
    declaracao_variaveis           shift and go to state 9
    programa                       shift and go to state 13
    var                            shift and go to state 6
    declaracao                     shift and go to state 10
    lista_declaracoes              shift and go to state 4

state 1

    (5) declaracao -> inicializacao_variaveis .

    INTEIRO         reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    FLUTUANTE       reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    ID              reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    $end            reduce using rule 5 (declaracao -> inicializacao_variaveis .)


state 2

    (18) declaracao_funcao -> cabecalho .

    INTEIRO         reduce using rule 18 (declaracao_funcao -> cabecalho .)
    FLUTUANTE       reduce using rule 18 (declaracao_funcao -> cabecalho .)
    ID              reduce using rule 18 (declaracao_funcao -> cabecalho .)
    $end            reduce using rule 18 (declaracao_funcao -> cabecalho .)


state 3

    (7) declaracao_variaveis -> tipo . DOISPONTOS lista_variaveis
    (17) declaracao_funcao -> tipo . cabecalho
    (19) cabecalho -> . ID ABREPAR lista_parametros FECHAPAR corpo FIM

    DOISPONTOS      shift and go to state 14
    ID              shift and go to state 16

    cabecalho                      shift and go to state 15

state 4

    (1) programa -> lista_declaracoes .
    (2) lista_declaracoes -> lista_declaracoes . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . inicializacao_variaveis
    (6) declaracao -> . declaracao_funcao
    (7) declaracao_variaveis -> . tipo DOISPONTOS lista_variaveis
    (8) inicializacao_variaveis -> . atribuicao
    (17) declaracao_funcao -> . tipo cabecalho
    (18) declaracao_funcao -> . cabecalho
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE
    (38) atribuicao -> . var ATRIBUICAO expressao
    (19) cabecalho -> . ID ABREPAR lista_parametros FECHAPAR corpo FIM
    (11) var -> . ID
    (12) var -> . ID indice

    $end            reduce using rule 1 (programa -> lista_declaracoes .)
    INTEIRO         shift and go to state 7
    FLUTUANTE       shift and go to state 5
    ID              shift and go to state 11

    cabecalho                      shift and go to state 2
    tipo                           shift and go to state 3
    declaracao_funcao              shift and go to state 8
    atribuicao                     shift and go to state 12
    inicializacao_variaveis        shift and go to state 1
    declaracao_variaveis           shift and go to state 9
    var                            shift and go to state 6
    declaracao                     shift and go to state 17

state 5

    (16) tipo -> FLUTUANTE .

    DOISPONTOS      reduce using rule 16 (tipo -> FLUTUANTE .)
    ID              reduce using rule 16 (tipo -> FLUTUANTE .)


state 6

    (38) atribuicao -> var . ATRIBUICAO expressao

    ATRIBUICAO      shift and go to state 18


state 7

    (15) tipo -> INTEIRO .

    DOISPONTOS      reduce using rule 15 (tipo -> INTEIRO .)
    ID              reduce using rule 15 (tipo -> INTEIRO .)


state 8

    (6) declaracao -> declaracao_funcao .

    INTEIRO         reduce using rule 6 (declaracao -> declaracao_funcao .)
    FLUTUANTE       reduce using rule 6 (declaracao -> declaracao_funcao .)
    ID              reduce using rule 6 (declaracao -> declaracao_funcao .)
    $end            reduce using rule 6 (declaracao -> declaracao_funcao .)


state 9

    (4) declaracao -> declaracao_variaveis .

    INTEIRO         reduce using rule 4 (declaracao -> declaracao_variaveis .)
    FLUTUANTE       reduce using rule 4 (declaracao -> declaracao_variaveis .)
    ID              reduce using rule 4 (declaracao -> declaracao_variaveis .)
    $end            reduce using rule 4 (declaracao -> declaracao_variaveis .)


state 10

    (3) lista_declaracoes -> declaracao .

    INTEIRO         reduce using rule 3 (lista_declaracoes -> declaracao .)
    FLUTUANTE       reduce using rule 3 (lista_declaracoes -> declaracao .)
    ID              reduce using rule 3 (lista_declaracoes -> declaracao .)
    $end            reduce using rule 3 (lista_declaracoes -> declaracao .)


state 11

    (19) cabecalho -> ID . ABREPAR lista_parametros FECHAPAR corpo FIM
    (11) var -> ID .
    (12) var -> ID . indice
    (13) indice -> . indice ABRECOLCH expressao FECHACOLCH
    (14) indice -> . ABRECOLCH expressao FECHACOLCH

    ABREPAR         shift and go to state 21
    ATRIBUICAO      reduce using rule 11 (var -> ID .)
    ABRECOLCH       shift and go to state 19

    indice                         shift and go to state 20

state 12

    (8) inicializacao_variaveis -> atribuicao .

    INTEIRO         reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    FLUTUANTE       reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    ID              reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    $end            reduce using rule 8 (inicializacao_variaveis -> atribuicao .)


state 13

    (0) S' -> programa .



state 14

    (7) declaracao_variaveis -> tipo DOISPONTOS . lista_variaveis
    (9) lista_variaveis -> . lista_variaveis VIRGULA var
    (10) lista_variaveis -> . var
    (11) var -> . ID
    (12) var -> . ID indice

    ID              shift and go to state 24

    var                            shift and go to state 23
    lista_variaveis                shift and go to state 22

state 15

    (17) declaracao_funcao -> tipo cabecalho .

    INTEIRO         reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    FLUTUANTE       reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    ID              reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    $end            reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)


state 16

    (19) cabecalho -> ID . ABREPAR lista_parametros FECHAPAR corpo FIM

    ABREPAR         shift and go to state 21


state 17

    (2) lista_declaracoes -> lista_declaracoes declaracao .

    INTEIRO         reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    FLUTUANTE       reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    ID              reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    $end            reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)


state 18

    (38) atribuicao -> var ATRIBUICAO . expressao
    (42) expressao -> . expressao_simples
    (43) expressao -> . atribuicao
    (44) expressao_simples -> . expressao_aditiva
    (45) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (38) atribuicao -> . var ATRIBUICAO expressao
    (46) expressao_aditiva -> . expressao_multiplicativa
    (47) expressao_aditiva -> . expressao_aditiva operador_multiplicacao expressao_unaria
    (11) var -> . ID
    (12) var -> . ID indice
    (48) expressao_multiplicativa -> . expressao_unaria
    (49) expressao_multiplicativa -> . expressao_aditiva operador_soma expressao_multiplicativa
    (50) expressao_unaria -> . fator
    (51) expressao_unaria -> . operador_soma fator
    (65) fator -> . ABREPAR expressao FECHAPAR
    (66) fator -> . var
    (67) fator -> . chamada_funcao
    (68) fator -> . numero
    (61) operador_soma -> . SOMA
    (62) operador_soma -> . SUBR
    (71) chamada_funcao -> . ID ABREPAR lista_argumentos FECHAPAR
    (69) numero -> . INTEIRO
    (70) numero -> . FLUTUANTE

    ID              shift and go to state 38
    ABREPAR         shift and go to state 28
    SOMA            shift and go to state 26
    SUBR            shift and go to state 34
    INTEIRO         shift and go to state 39
    FLUTUANTE       shift and go to state 31

    expressao_simples              shift and go to state 25
    numero                         shift and go to state 36
    expressao                      shift and go to state 29
    operador_soma                  shift and go to state 27
    chamada_funcao                 shift and go to state 35
    fator                          shift and go to state 30
    expressao_aditiva              shift and go to state 37
    atribuicao                     shift and go to state 40
    var                            shift and go to state 32
    expressao_unaria               shift and go to state 33
    expressao_multiplicativa       shift and go to state 41

state 19

    (14) indice -> ABRECOLCH . expressao FECHACOLCH
    (42) expressao -> . expressao_simples
    (43) expressao -> . atribuicao
    (44) expressao_simples -> . expressao_aditiva
    (45) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (38) atribuicao -> . var ATRIBUICAO expressao
    (46) expressao_aditiva -> . expressao_multiplicativa
    (47) expressao_aditiva -> . expressao_aditiva operador_multiplicacao expressao_unaria
    (11) var -> . ID
    (12) var -> . ID indice
    (48) expressao_multiplicativa -> . expressao_unaria
    (49) expressao_multiplicativa -> . expressao_aditiva operador_soma expressao_multiplicativa
    (50) expressao_unaria -> . fator
    (51) expressao_unaria -> . operador_soma fator
    (65) fator -> . ABREPAR expressao FECHAPAR
    (66) fator -> . var
    (67) fator -> . chamada_funcao
    (68) fator -> . numero
    (61) operador_soma -> . SOMA
    (62) operador_soma -> . SUBR
    (71) chamada_funcao -> . ID ABREPAR lista_argumentos FECHAPAR
    (69) numero -> . INTEIRO
    (70) numero -> . FLUTUANTE

    ID              shift and go to state 38
    ABREPAR         shift and go to state 28
    SOMA            shift and go to state 26
    SUBR            shift and go to state 34
    INTEIRO         shift and go to state 39
    FLUTUANTE       shift and go to state 31

    expressao_simples              shift and go to state 25
    numero                         shift and go to state 36
    expressao                      shift and go to state 42
    operador_soma                  shift and go to state 27
    chamada_funcao                 shift and go to state 35
    fator                          shift and go to state 30
    expressao_aditiva              shift and go to state 37
    atribuicao                     shift and go to state 40
    var                            shift and go to state 32
    expressao_unaria               shift and go to state 33
    expressao_multiplicativa       shift and go to state 41

state 20

    (12) var -> ID indice .
    (13) indice -> indice . ABRECOLCH expressao FECHACOLCH

    ATRIBUICAO      reduce using rule 12 (var -> ID indice .)
    VEZES           reduce using rule 12 (var -> ID indice .)
    DIVIDE          reduce using rule 12 (var -> ID indice .)
    SOMA            reduce using rule 12 (var -> ID indice .)
    SUBR            reduce using rule 12 (var -> ID indice .)
    MENOR           reduce using rule 12 (var -> ID indice .)
    MAIOR           reduce using rule 12 (var -> ID indice .)
    IGUAL           reduce using rule 12 (var -> ID indice .)
    DIFERENTE       reduce using rule 12 (var -> ID indice .)
    MENORIGUAL      reduce using rule 12 (var -> ID indice .)
    MAIORIGUAL      reduce using rule 12 (var -> ID indice .)
    ELOGICO         reduce using rule 12 (var -> ID indice .)
    OULOGICO        reduce using rule 12 (var -> ID indice .)
    NEGACAO         reduce using rule 12 (var -> ID indice .)
    FECHACOLCH      reduce using rule 12 (var -> ID indice .)
    INTEIRO         reduce using rule 12 (var -> ID indice .)
    FLUTUANTE       reduce using rule 12 (var -> ID indice .)
    ID              reduce using rule 12 (var -> ID indice .)
    $end            reduce using rule 12 (var -> ID indice .)
    FECHAPAR        reduce using rule 12 (var -> ID indice .)
    VIRGULA         reduce using rule 12 (var -> ID indice .)
    FIM             reduce using rule 12 (var -> ID indice .)
    error           reduce using rule 12 (var -> ID indice .)
    SE              reduce using rule 12 (var -> ID indice .)
    REPITA          reduce using rule 12 (var -> ID indice .)
    LEIA            reduce using rule 12 (var -> ID indice .)
    ESCREVA         reduce using rule 12 (var -> ID indice .)
    RETORNA         reduce using rule 12 (var -> ID indice .)
    ABREPAR         reduce using rule 12 (var -> ID indice .)
    ENTAO           reduce using rule 12 (var -> ID indice .)
    ATE             reduce using rule 12 (var -> ID indice .)
    SENAO           reduce using rule 12 (var -> ID indice .)
    ABRECOLCH       shift and go to state 43


state 21

    (19) cabecalho -> ID ABREPAR . lista_parametros FECHAPAR corpo FIM
    (20) lista_parametros -> . lista_parametros VIRGULA lista_parametros
    (21) lista_parametros -> . parametro
    (22) lista_parametros -> . vazio
    (23) parametro -> . tipo DOISPONTOS ID
    (24) parametro -> . parametro ABRECOLCH FECHACOLCH
    (75) vazio -> .
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE

    FECHAPAR        reduce using rule 75 (vazio -> .)
    VIRGULA         reduce using rule 75 (vazio -> .)
    INTEIRO         shift and go to state 7
    FLUTUANTE       shift and go to state 5

    parametro                      shift and go to state 46
    lista_parametros               shift and go to state 44
    vazio                          shift and go to state 47
    tipo                           shift and go to state 45

state 22

    (7) declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .
    (9) lista_variaveis -> lista_variaveis . VIRGULA var

    INTEIRO         reduce using rule 7 (declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .)
    FLUTUANTE       reduce using rule 7 (declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .)
    ID              reduce using rule 7 (declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .)
    $end            reduce using rule 7 (declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .)
    FIM             reduce using rule 7 (declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .)
    SENAO           reduce using rule 7 (declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .)
    error           reduce using rule 7 (declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .)
    SE              reduce using rule 7 (declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .)
    REPITA          reduce using rule 7 (declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .)
    LEIA            reduce using rule 7 (declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .)
    ESCREVA         reduce using rule 7 (declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .)
    RETORNA         reduce using rule 7 (declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .)
    ABREPAR         reduce using rule 7 (declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .)
    SOMA            reduce using rule 7 (declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .)
    SUBR            reduce using rule 7 (declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .)
    ATE             reduce using rule 7 (declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .)
    VIRGULA         shift and go to state 48


state 23

    (10) lista_variaveis -> var .

    VIRGULA         reduce using rule 10 (lista_variaveis -> var .)
    INTEIRO         reduce using rule 10 (lista_variaveis -> var .)
    FLUTUANTE       reduce using rule 10 (lista_variaveis -> var .)
    ID              reduce using rule 10 (lista_variaveis -> var .)
    $end            reduce using rule 10 (lista_variaveis -> var .)
    FIM             reduce using rule 10 (lista_variaveis -> var .)
    error           reduce using rule 10 (lista_variaveis -> var .)
    SE              reduce using rule 10 (lista_variaveis -> var .)
    REPITA          reduce using rule 10 (lista_variaveis -> var .)
    LEIA            reduce using rule 10 (lista_variaveis -> var .)
    ESCREVA         reduce using rule 10 (lista_variaveis -> var .)
    RETORNA         reduce using rule 10 (lista_variaveis -> var .)
    ABREPAR         reduce using rule 10 (lista_variaveis -> var .)
    SOMA            reduce using rule 10 (lista_variaveis -> var .)
    SUBR            reduce using rule 10 (lista_variaveis -> var .)
    ATE             reduce using rule 10 (lista_variaveis -> var .)
    SENAO           reduce using rule 10 (lista_variaveis -> var .)


state 24

    (11) var -> ID .
    (12) var -> ID . indice
    (13) indice -> . indice ABRECOLCH expressao FECHACOLCH
    (14) indice -> . ABRECOLCH expressao FECHACOLCH
